test/org/midica/testfiles/failing/global-tonality-invalid.midica
INCLUDE inc/instruments.midica

* key c/inval

0 c /4
